<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/drawer_orders"
        android:title="@string/orders"
        android:icon="@drawable/ic_orders_24"
        android:iconTint="@color/nav_icon_tint"
        android:titleTextColor="@color/nav_text_tint" />
    <item
        android:id="@+id/drawer_wishlist"
        android:title="@string/wishlist"
        android:icon="@drawable/ic_wishlist_24"
        android:iconTint="@color/nav_icon_tint"
        android:titleTextColor="@color/nav_text_tint" />
    <item
        android:id="@+id/drawer_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications_24"
        android:iconTint="@color/nav_icon_tint"
        android:titleTextColor="@color/nav_text_tint" />
    <item
        android:id="@+id/drawer_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_24"
        android:iconTint="@color/nav_icon_tint"
        android:titleTextColor="@color/nav_text_tint" />
    <item
        android:id="@+id/drawer_help"
        android:title="@string/help"
        android:icon="@drawable/ic_help_24"
        android:iconTint="@color/nav_icon_tint"
        android:titleTextColor="@color/nav_text_tint" />
</menu>