<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_24"
        android:iconTint="@color/nav_icon_tint"
        android:titleTextColor="@color/nav_text_tint" />
    <item
        android:id="@+id/nav_compare"
        android:title="Compare"
        android:icon="@drawable/ic_compare_arrows_24"
        android:iconTint="@color/nav_icon_tint"
        android:titleTextColor="@color/nav_text_tint" />
    <item
        android:id="@+id/nav_cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_shopping_cart_24"
        android:iconTint="@color/nav_icon_tint"
        android:titleTextColor="@color/nav_text_tint" />
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_24"
        android:iconTint="@color/nav_icon_tint"
        android:titleTextColor="@color/nav_text_tint" />
</menu>